--- a/homework/html homework.html
+++ b/homework/html homework.html
@@ -5,9 +5,10 @@
 </head>
 <body>
 
-<h1>]個人介紹</h1>
+<h1>個人介紹</h1>
 <p>資工一 陳郁祁 111110552</p>
 <img src="photo.jpg">
+<br/>
 <a href="https://www.facebook.com/profile.php?id=100000479326350">This is my FB</a>
 
 </body>
