--- a/homework9/1.html
+++ b/homework9/1.html
@@ -3,12 +3,12 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="topbar.css"/>
+<link rel="stylesheet" href="1.css"/>
 </head>
 <body>
 
 <div class="navbar">
-  <a href="#home">首頁</a>
+ <a href="#home">首頁</a>
   <div class="dropdown">
     <button class="dropbtn" onclick="myFunction()">使用者
       <i class="fa fa-caret-down"></i>
@@ -20,10 +20,10 @@
     </div>
   </div> 
 </div>
-<div class="bigmargin">
+<div id="main">
   <h1>首頁</h1>
   <p>本網頁可以按功能表去切換畫面</p>  
 </div>
-<script src="topbar.js"></script>
+<script src="1.js"></script>
 </body>
 </html>
