--- a/homework9/1.html
+++ b/homework9/1.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="1.css"/>
+<link rel="stylesheet" href="abc.css"/>
 </head>
 <body>
 
@@ -24,6 +24,6 @@
   <h1>首頁</h1>
   <p>本網頁可以按功能表去切換畫面</p>  
 </div>
-<script src="1.js"></script>
+<script src="abc.js"></script>
 </body>
 </html>
